--- a/src/components/Filters/Profession/profession.css
+++ b/src/components/Filters/Profession/profession.css
@@ -1,13 +1,8 @@
 .pro-annee-container{
+    width:100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    margin-right: 15px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.pro-annee-profession{
-    width: 150px;
-    margin-left: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
