--- a/src/components/container/container.css
+++ b/src/components/container/container.css
@@ -1,22 +1,24 @@
 #big-container-block{
     width: 100vw;
     background-color: rgb(50, 50, 50);
-    height: 600px;
+    max-height: 600px;
     display: flex;
     justify-content: center;
+ 
+ 
 }
 
 #small-container-block {
     width:70%;
-    height: auto;
+    height: 600px;
     background-color: #7E232F;
     /* display: flex; */
     justify-content: center;
+    overflow: scroll;
+   
 }
 
-#container-filtre {
-    overflow: auto;
-}
+ 
 
 #filter-div {
     display: flex;
