login + modal + design

--- a/src/components/Filters/Recherche/recherche.css
+++ b/src/components/Filters/Recherche/recherche.css
@@ -1,6 +1,8 @@
 #container-search{
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     margin-top: 20px;
 }
+
