--- a/src/components/container/container.css
+++ b/src/components/container/container.css
@@ -1,9 +1,11 @@
 #big-container-block{
     width: 100vw;
-    background-color: rgb(50, 50, 50);
+    background-color: #fafafa;
     max-height: 600px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    border : 1px solid black;
  
  
 }
@@ -15,26 +17,34 @@
     /* display: flex; */
     justify-content: center;
     overflow: scroll;
-   
+    border: 1px solid black;
 }
 
- 
+#filter-search {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-#filter-div {
+
+ #filter-div {
     display: flex;
     justify-content: center;
     align-items: center;
     width:100%;
+    flex-direction: column;
 }
 
 #filter-div2 {
-    width:70%;
+ 
     display: flex;
     justify-content: center;
     align-items: center;
-
+ 
 }
 
+ 
 
 
 
