design + profil card

--- a/src/components/container/container.css
+++ b/src/components/container/container.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    margin-bottom: 200px;
  }
 
 #small-container-block {
@@ -13,14 +13,12 @@
     height: 640px;
     background-color: #7E232F;
     justify-content: center;
-    
     position: absolute;
     margin-top: 520px;
     padding-top: 2%;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     border-radius: 0.5%;
 }
-
 
 #filter-search {
     width: 100%;
