--- a/src/components/ModalUser/ModalUser.css
+++ b/src/components/ModalUser/ModalUser.css
@@ -8,7 +8,7 @@
 
 .name-user {
     margin-top: 15px;
-    font-size: 24px;
+    font-size: 28px;
 }
 
 .picture {
@@ -21,18 +21,39 @@
     display: flex;
     justify-content: center;
     margin: 15px 0 0 0;
+    height: 80px;
 }
 
 .logo {
-    width: 60px;
-    height: 60px;
-    margin: 4px 18px 4px 18px;
+    width: 45px;
+    height: 45px;
+    margin: 4px 30px 4px 38px;
+    cursor: pointer;
 }
 
-
+.logo:hover {
+    transform: scale(1.1);
+    transition: 0.6s;
+}
 
 .detail {
     margin: 6px 20px 0px 20px;
+    background-color: #7b1420d4;
+    color: white;
+    border-radius: 15px;
+    padding: 2px 6px;
+    margin-left: 10px !important;
+    font-size: 14px !important;
+}
+
+.detail-job{
+    margin: 2px 20px 0px 20px;
+}
+
+.profession {
+    margin: 8px 20px 0px 20px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .bio {
@@ -57,17 +78,56 @@
 
 .contact-title {
     font-size: 20px;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
-.phone-box {
+.mail-box{
     display: flex;
-    align-items:center;
-    justify-content:flex-end;
+    flex-direction: column;
+    align-items: center;
     height: 50px;
 }
 
 .phone {
     font-weight: bold;
-    margin-right: 100px;
+    margin-right: 0px;
+    margin-top: 24px;
+    border-radius: 15px;
+    padding: 1px 4px;
+    background-color: black;
+    color: white;
+}
+
+.name{
+    text-transform: uppercase;
+}
+
+.container-user .contact {
+    color:#7b1420d4;
+    background-color: white;
+    font-weight: bold;
+    border-radius: 15px;
+    border: 1px solid #7b1420d4;
+}
+
+.container-user .contact:hover {
+    color: white;
+    background-color: #7b1420d4 ;
+    font-weight: bold;
+}
+
+.line {
+    width: 280px;
+    border-top: 1px solid #7b1420d4;
+    margin-top: 25px;
+}
+
+.email {
+    margin-right: 5px;
+    font-weight: bold;
+    margin-top: 24px;
+    border-radius: 15px;
+    padding: 1px 4px;
+    background-color: #df4133;
+    color: white;
 }
