--- a/src/components/ModalUser/ModalUser.css
+++ b/src/components/ModalUser/ModalUser.css
@@ -98,7 +98,7 @@
     color: white;
 }
 
-.name{
+ .name{
     text-transform: uppercase;
 }
 
@@ -130,4 +130,20 @@
     padding: 1px 4px;
     background-color: #df4133;
     color: white;
+}
+
+.btn-download {
+    border-radius: 25px;
+    border: 1px solid #7b1420d4 ;
+    color: #7b1420d4;
+    background-color: #fafafa;
+    font-weight: bold;
+}
+
+.btn-download:hover {
+    border-radius: 25px;
+    border: 1px solid #fafafa ;
+    color: #fafafa;
+    background-color: #7b1420d4;
+    font-weight: bold;
 }
