--- a/src/components/ModalUser/ModalUser.css
+++ b/src/components/ModalUser/ModalUser.css
@@ -41,23 +41,25 @@
     background-color: #7b1420d4;
     color: white;
     border-radius: 15px;
-    padding: 2px 6px;
+    padding: 3px 6px;
     margin-left: 10px !important;
     font-size: 14px !important;
 }
 
 .detail-job{
     margin: 2px 20px 0px 20px;
+    font-size: 15px;
+    font-weight: 600;
 }
 
 .profession {
     margin: 8px 20px 0px 20px;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
 }
 
 .bio {
-    margin: 10px 40px 40px 40px;
+    margin: 20px 40px 30px 40px;
 }
 
 .year {
