--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 .headerBtn{
-    margin:4px;
+    margin:15px;
     width: 80px;
     text-align: center;
     border-Radius: 25px; 
@@ -19,7 +19,7 @@
     display: flex;
     justify-content: space-between;
      align-Items: center;
-    height: 140px;
+    height: 10%;
     width: 100%;
     background-color: #fafafa; 
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -28,6 +28,7 @@
 .logo-header {
     width: 160px ;
     height: auto;
+    margin-left: 36px;
 }
 
 .logo-box{
@@ -40,7 +41,7 @@
             flex-direction: row;
            justify-content: center;
             align-Items: center ;
-            margin-right:10px;
+            
             margin-top: 80px;
             text-align: center;
 }
@@ -87,4 +88,39 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-right: 30px;
 }
+
+@media (max-width: 576px) { 
+    .logo-header{
+        width:130px;
+        margin-left: 10px;
+    }
+
+    .logo-box{ 
+        margin-left: 2px;
+    }
+
+    .button-box{
+        flex-direction: column;
+    }
+
+    .header{
+        width: 100%;
+        height: 5%;
+        
+    }
+}
+
+
+@media (max-width: 767px) { 
+    
+ }
+ 
+
+@media (max-width: 992px) {
+  
+}
+
+
+@media (max-width: 1200px) { }
