--- a/src/components/list/listusers.css
+++ b/src/components/list/listusers.css
@@ -7,12 +7,30 @@
 }
 
 #delete-button {
-    background-color: red;
-    color:white;
+    background-color: #7b1420d4;
+    color: white;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 20px;
+    border : 1px solid #7b1420d4;
+    width: 40px;
+    height: 40px;
 }
 
 #delete-button:hover {
-   opacity: 0.5;
+background-color: white ;
+color: #7b1420d4 ;
+
+}
+
+
+.waiting{
+    background: grey;
+     color: white;
+      border-Radius: 10px;
+      padding: 1px 4px 1px 4px;
+      font-weight: bold;
+      
 }
 #schoolid {
     margin-right: 7px;
@@ -33,6 +51,8 @@
     display: flex;
     flex-direction: row;
 }
+
+
 
 @media (max-width: 1200px) {
     .job-tag{
