--- a/src/components/modal/Register.css
+++ b/src/components/modal/Register.css
@@ -20,6 +20,7 @@
   justify-content: space-around;
  flex-direction: row;
   width: 100%;
+  margin-bottom: 8px;
 }
 
 .dateJob2 {
@@ -28,12 +29,15 @@
   justify-content: space-around;
   flex-direction: row;
   width: 100%;
+  margin-bottom: 12px;
 }
 
 .confirm{
   color: red;
   display: none;
-  font-size: 8px;
+  font-size: 15px;
+  margin-bottom: 0;
+  margin-top: 15px;
 }
 
 .star-box {
