--- a/src/components/ModalUser/ModalUser.css
+++ b/src/components/ModalUser/ModalUser.css
@@ -140,6 +140,7 @@
     color: #7b1420d4;
     background-color: #fafafa;
     font-weight: bold;
+    margin-bottom: 14px;
 }
 
 .btn-download:hover {
