--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,9 +6,9 @@
    width: 100%;
    background-color: #fafafa;
    height: 10%;
-    z-index:2;
+   z-index:2;
    bottom: 0;
-   position: absolute;
+   position:absolute;
    box-shadow: 0 0 10px 10px rgba(0,0,0,0.19);
  }
  
@@ -17,7 +17,7 @@
    align-items: center;
    flex-direction: column;
    justify-items: center;
-   margin-right: 20px;
+   margin-right: 2%;
  }
  
  .website-box{
