--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -28,22 +28,21 @@
 .logo-header {
     width: 160px ;
     height: auto;
-    margin-left: 36px;
+    
 }
 
 .logo-box{
-    margin-left: 20px;
+    margin-left: 3%;
     margin-top: 2px;
 }
 
 .button-box{
     display: flex;
-            flex-direction: row;
-           justify-content: center;
-            align-Items: center ;
-            
-            margin-top: 80px;
-            text-align: center;
+    flex-direction: row;
+    justify-content: center;
+    align-Items: center ;
+    margin-top: 80px;
+     text-align: center;
 }
 
 .profil-picture{
@@ -87,7 +86,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-right: 30px;
+    margin-right: 5%;
 }
 
 @media (max-width: 576px) { 
