--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,11 @@
 .headerBtn{
-    margin:15px;
-    width: 80px;
+    margin:10px 15px 5px 15px;
+    width: 94px;
     text-align: center;
     border-Radius: 25px; 
     border: 1px solid #862628;
      background-Color: #fafafa;
-     font-size: 12px;
+     font-size: 16px;
      color:#862628;
      font-weight: bold;
 }
@@ -33,7 +33,7 @@
 
 .logo-box{
 
-    margin-left: 3%;
+    margin-left: 5%;
 
     margin-top: 2px;
 }
@@ -44,7 +44,7 @@
     justify-content: center;
     align-Items: center ;
     margin-top: 80px;
-     text-align: center;
+    text-align: center;
 }
 
 .profil-picture{
