--- a/src/components/Filters/Recherche/recherche.css
+++ b/src/components/Filters/Recherche/recherche.css
@@ -25,3 +25,10 @@
     justify-content: center;
 }
 
+@media (max-width: 576px) { 
+    .box-search{
+        width: 105%;
+        margin-top: 4px;
+    }
+    }
+  
