--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -76,7 +76,6 @@
   height: 36px;
   margin:2px 5px 5px 12px;
   color: #7E232F;
-
 }
 
 .logo-f:hover{
@@ -99,15 +98,45 @@
   .footer{
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content:center;
     align-items:center;
      width: 100%;
      background-color: #fafafa;
-     height: 10%;
+     
     box-shadow: 0 0 10px 10px rgba(0,0,0,0.19);
     position: relative;
    }
+
+   .social-container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-items: center;
+    margin-right: 0;
+  }
+  
+  .website-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0;
+  }
+
+  .logo-r{
+    width: 27px;
+    margin:2px 2px 2px 12px;
+    color: #7E232F;
+  
+  }
+  .logo-f{
+   width: 29px;
+   height: 30px;
+   margin:2px 2px 2px 12px;
+   color: #7E232F;
 }
+
+ }
 
 
 @media (max-width: 767px) { 
