--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -28,13 +28,10 @@
 .logo-header {
     width: 160px ;
     height: auto;
-    
 }
 
 .logo-box{
-
     margin-left: 5%;
-
     margin-top: 2px;
 }
 
@@ -93,16 +90,16 @@
 
 @media (max-width: 576px) { 
     .logo-header{
-        width:130px;
-        margin-left: 10px;
+        width:140px;
     }
 
     .logo-box{ 
         margin-left: 2px;
     }
 
-    .button-box{
-        flex-direction: column;
+    .button-box .headerBtn{
+        width: 80px;
+        font-size: 10px;
     }
 
     .header{
@@ -117,7 +114,6 @@
     }
  }
  
-
 @media (max-width: 992px) {
     .logo-box {
         margin-left: 0;
@@ -130,7 +126,6 @@
         margin-right: 16px;
     }
 }
-
 
 @media (max-width: 1200px) {
     .logo-box {
