--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -88,6 +88,14 @@
     margin-right: 5%;
 }
 
+.ant-input-affix-wrapper {
+    padding: 5px 11px !important;
+}
+
+.ant-input-search > .ant-input-group > .ant-input-group-addon:last-child .ant-input-search-button {
+    padding-bottom: 15px !important;
+}
+
 @media (max-width: 576px) { 
     .logo-header{
         width:140px;
@@ -98,19 +106,28 @@
     }
 
     .button-box .headerBtn{
-        width: 80px;
-        font-size: 10px;
+        width: 100px;
+        font-size: 15px;
+        margin: 7px;
     }
 
     .header{
         width: 100%;
-        height: 170px;
+        height: 150px;
+    }
+    .button-box{
+        display: flex;
+        flex-direction: row !important;
+        width: 300px;
     }
 }
 
 @media (max-width: 767px) { 
     #big-container-block{
         height: 550px;
+    }
+    #small-container-block {
+        margin-top: 69px !important;
     }
  }
  
@@ -124,6 +141,9 @@
     }
     .connection-zone {
         margin-right: 16px;
+    }
+    #container-filtre {
+        height: 73% !important;
     }
 }
 
@@ -139,7 +159,11 @@
         margin-top: 10px;
         margin-bottom: 15px;
     }
+    #small-container-block {
+        width: 52%;
+
  }
+}
 
 @media (max-width: 1700px) {
     .button-box {
@@ -147,6 +171,7 @@
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
+
     }
     .headerBtn {
         margin: 0;
